boilerplate_v9/environment/kubernates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
spec:
  selector:
    matchLabels:
      run: laravel
  template:
    metadata:
      labels:
        run: laravel
    spec:
      containers:
        - name: demo
          image: lucasfer/laravel_app
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: laravel
  labels:
    app: laravel
    tier: web
spec:
  type: NodePort
  selector:
    app: laravel
    tier: web
  ports:
    - port: 80
      nodePort: 30000
