boilerplate_v9/environment/kubernates/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    tier: backend
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      tier: backend
  template:
    metadata:
      labels:
        app: nginx
        tier: backend
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    tier: backend
    app: nginx
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32380
  selector:
    tier: backend
    app: nginx
  type: LoadBalancer
